fixed search bar issue and tweaked sidekick ad on mobile

--- a/styles/sass/components/_sidebar.sass
+++ b/styles/sass/components/_sidebar.sass
@@ -8,7 +8,6 @@ $nav-height-mobile: 75px
     display: flex
     flex-direction: column
     background-color: white
-    border: 0.01562em solid rgba(151, 151, 151, 1)
     border-top: none
     transition: left 0.5s ease-in-out
     font-size: 0.8em
@@ -21,7 +20,7 @@ $nav-height-mobile: 75px
             width: 100%
             padding: 50px
             height: 50px
-            border-bottom: 0.01562em solid lightgrey        
+            border-bottom: 1px solid rgba(151, 151, 151, 0.2)
 
 .sidebar.open
     left: 0
@@ -46,7 +45,7 @@ $nav-height-mobile: 75px
 
 .sidebar-item
     overflow: visible
-    border-bottom: 0.01562em solid lightgrey
+    border-bottom: 1px solid rgba(151, 151, 151, 0.2)
 
 
 .sidebar-item
