--- a/styles/sass/layout/_header.sass
+++ b/styles/sass/layout/_header.sass
@@ -27,8 +27,8 @@ header
 .sticky-on-scroll
   position: sticky
   top: 0
-  z-index: 10005
   max-height: 100%
+  z-index: 10000
 
 #masthead
   +respond-to(schmedium)
