--- a/styles/sass/layout/_navigation.sass
+++ b/styles/sass/layout/_navigation.sass
@@ -20,10 +20,9 @@ nav
   > .container
     +flex(row, center, space-between)
 
-  background-color: white
+  background-color: rgba(#FFFFFF, 0.95)
   transition: background-color .5s linear
   top: 0
-  z-index: 10001
   overflow-x: auto !important
 
 #menu-btn,
